[gd_scene load_steps=6 format=2]

[ext_resource path="res://Reusable/Enemies/Turret/BulletSpawner.gd" type="Script" id=1]
[ext_resource path="res://Reusable/Enemies/Turret/Anim/Turret.png" type="Texture" id=2]
[ext_resource path="res://Reusable/Effects/DamageFlash.tres" type="Animation" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 5.07056, 8.99871 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 144.0

[node name="Turret" type="StaticBody2D" groups=[
"Enemy",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.75
one_shot = false
autostart = false

[node name="origin" type="Position2D" parent="." index="2"]

position = Vector2( 0, -11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="Initiate" type="Area2D" parent="." index="4"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Initiate" index="0"]

shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/DamageFlash = ExtResource( 3 )
anims/damage = ExtResource( 3 )
blend_times = [  ]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="." index="6"]

scale = Vector2( 0.4, 0.4 )
rect = Rect2( -10, -10, 20, 20 )
pause_animations = true
freeze_bodies = true
pause_particles = true
pause_animated_sprites = true
process_parent = false
physics_process_parent = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="body_entered" from="Initiate" to="." method="_on_Initiate_body_entered"]

[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]

[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]


